src/objects/ENC_Encuesta_Tipo__c.object
<CustomObject>
    <description>Representa la conexión de las preguntas elegidas para la encuesta del tipo de encuesta elegido con la Encuesta.</description>
    <fields>
        <fullName>ENT_LKP_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Compañía vinculada a la encuesta tipo.</description>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Encuestas Tipo</relationshipLabel>
        <relationshipName>EncuestasTipo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENT_LKP_PrimeraPregunta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primera pregunta de la encuesta tipo.</description>
        <label>Primera Pregunta</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ENC_Pregunta__c.ENP_LKP_Encuesta_Tipo__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ENC_Pregunta__c</referenceTo>
        <relationshipLabel>Encuestas Tipo</relationshipLabel>
        <relationshipName>EncuestasTipo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENT_SEL_Long_Encuesta__c</fullName>
        <description>Clasificación de la encuesta tipo: Corta/Larga</description>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Encuesta</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENT_TXT_Descripcion__c</fullName>
        <description>Descripción breve de la encuesta.</description>
        <label>Descripción</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENT_TXT_Identificador__c</fullName>
        <description>Indica el identificador de la encuesta (T-Nº encuesta_cod_CIA_Tipo encuesta)</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Encuesta Tipo</label>
    <listViews>
        <fullName>Todas_las_Encuestas</fullName>
        <columns>NAME</columns>
        <columns>ENT_LKP_Cuenta__c</columns>
        <columns>ENT_TXT_Identificador__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las Encuestas</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encuestas Tipo</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(ENT_TXT_Identificador__c ))),ISCHANGED(ENT_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK( ENT_TXT_Identificador__c),ISNULL( ENT_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>ENT_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>